--- a/.css/menu.css
+++ b/.css/menu.css
@@ -1,9 +1,9 @@
 /* скрываем чекбокс */
 #menu__toggle {
 	opacity: 0;
-  }
+	}
   /* стилизуем кнопку */
-  .menu__btn {
+.menu__btn {
 	display: flex; /* используем flex для центрирования содержимого */
 	align-items: center;  /* центрируем содержимое кнопки */
 	position: fixed;
@@ -13,27 +13,27 @@
 	height: 26px;
 	cursor: pointer;
 	z-index: 1;
-  }
-  /* добавляем "бургер" */
-  .menu__btn > span,
-  .menu__btn > span::before,
-  .menu__btn > span::after {
+	}
+/* добавляем "бургер" */
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
 	display: block;
 	position: absolute;
 	width: 100%;
 	height: 2px;
 	background-color: #ddd011;
-  }
-  .menu__btn > span::before {
+	}
+.menu__btn > span::before {
 	content: '';
 	top: -8px;
-  }
-  .menu__btn > span::after {
+	}
+.menu__btn > span::after {
 	content: '';
 	top: 8px;
-  }
+	}
 
-  /* контейнер меню */
+/* контейнер меню */
 .menu__box {
 	display: block;
 	position: fixed;
@@ -48,9 +48,9 @@
 	text-align: center;
 	background-color: rgb(18, 82, 82);
 	box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-  }
-  /* элементы меню */
-  .menu__item {
+	}
+/* элементы меню */
+.menu__item {
 	display: block;
 	padding: 12px 24px;
 	color: #ddd011;
@@ -58,23 +58,45 @@
 	font-size: 20px;
 	font-weight: 600;
 	text-decoration: none;
-  }
-  .menu__item:hover {
-	background-color: rgb(18, 82, 82);
-  }
+	}
+.menu__item:hover {
+	background-color: rgb(17, 121, 121);
+	}
 
-  #menu__toggle:checked ~ .menu__btn > span {
+#menu__toggle:checked ~ .menu__btn > span {
 	transform: rotate(45deg);
-  }
-  #menu__toggle:checked ~ .menu__btn > span::before {
+	}
+#menu__toggle:checked ~ .menu__btn > span::before {
 	top: 0;
 	transform: rotate(0);
-  }
-  #menu__toggle:checked ~ .menu__btn > span::after {
+	}
+#menu__toggle:checked ~ .menu__btn > span::after {
 	top: 0;
 	transform: rotate(90deg);
-  }
-  #menu__toggle:checked ~ .menu__box {
+	}
+#menu__toggle:checked ~ .menu__box {
 	visibility: visible;
 	left: 0;
-  }
+	}
+.header {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+}
+.header-inner {
+	height: 50px;
+	width: 100%;
+	background-color: rgb(17, 121, 121);
+}
+.footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+.footer-inner {
+	height: 50px;
+	width: 100%;
+	background-color:rgb(17, 121, 121);
+}
